搭建个人项目

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: ''
+      name: '党博学习文档',
+      repo: 'https://github.com/xiaoliangzong/document.git',
+      coverpage: true
     }
   </script>
+  
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
 </body>
