--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>dangbo-document</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -10,15 +10,62 @@
 </head>
 <body>
   <div id="app"></div>
-  <script>
-    window.$docsify = {
-      name: '党博学习文档',
-      repo: 'https://github.com/xiaoliangzong/document.git',
-      coverpage: true
-    }
-  </script>
+	<script>
+		window.$docsify = {
+		  name: '葵花宝典',
+		  // repo: 'https://github.com/xiaoliangzong/document.git',			// 设置右上角显示git图标链接
+		  coverpage: true,  // 设置封面
+		  onlyCover: true,  // 只显示封面
+		  loadNavbar: true,  // 设置导航栏
+		  auto2top: true, // 是否在切换页面后回到顶部 
+		  // 完整配置参数
+		  search: {
+			paths: 'auto',
+			placeholder: '🔍 搜索', // 搜索提示框文字， 支持本地化，例子在下面
+			noData: '找不到结果!',
+			depth: 6,                       // 搜索标题的最大程级, 1 - 6
+		  }
+		}
+
+	</script>
   
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.11.2/docsify.js"></script>
+
+	<!-- 引入搜索模块 -->
+	<script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.11.2/plugins/search.min.js"></script>
+	<!--<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>-->
+	<!--<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>-->
+	
+	
+	<!-- 添加一键拷贝代码-->
+	<script src="//unpkg.com/docsify-copy-code"></script></script>
+	
+	<!-- 图片缩小方法-->
+	<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+	
+	<!-- mouse click -->
+	<script src="https://cdn.jsdelivr.net/gh/forthespada/forthespada.github.io@master/plugin/click_heart.js"></script>
+
+	<!-- 添加代码高亮 -->
+	<script src="//unpkg.com/prismjs/components/prism-bash.js"></script>  
+	<script src="//unpkg.com/prismjs/components/prism-java.js"></script>  
+	<script src="//unpkg.com/prismjs/components/prism-sql.js"></script>
+	<script src="//unpkg.com/prismjs/components/prism-java.js"></script>
+	<script src="//unpkg.com/prismjs/components/prism-sql.js"></script>
+	
+	<!-- 回到顶部功能 -->
+	<script src="https://cdn.jsdelivr.net/gh/forthespada/forthespada.github.io@master/plugin/jquery.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/forthespada/forthespada.github.io@master/plugin/jquery.goup.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function () {
+		  $.goup({
+			trigger: 700,
+			bottomOffset: 20,
+			locationOffset: 8,
+			title: '',
+			titleAsText: true
+		  });
+		});
+	</script>
 </body>
 </html>
