--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         sidebarDisplayLevel: 0,	// 设置默认折叠的层级
         auto2top: true, // 是否在切换页面后回到顶部
         logo: 'images/db_small.svg',
-        homepage: 'Java/javaSE/README.md',
+        homepage: 'README.md',
         // 完整配置参数
         search: {
             paths: 'auto',
