--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
     <!-- 主题样式 -->
-        <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
+<!--        <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">-->
     <!--        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">-->
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css">-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css">
     <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/buble.css">-->
     <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/dark.css">-->
     <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/pure.css">-->
@@ -79,7 +79,7 @@
 <script async
         src="https://cdn.jsdelivr.net/gh/forthespada/forthespada.github.io@master/plugin/js/busuanzi.pure.mini.js"></script>
 
-<!-- 字数统计功能 -->
+<!-- 字数统计功能，显示在右上角 -->
 <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
 
 <!-- 图片缩小方法 -->
@@ -179,7 +179,7 @@
         minutes - 0-59之间的整数，做为date对象的分钟数
         seconds - 0-59之间的整数，做为date对象的秒数
         microseconds - 0-999之间的整数，做为date对象的毫秒数 */
-        var t1 = Date.UTC(2020, 12, 13, 00, 00, 00); //北京时间2020-02-10 00:00:00
+        var t1 = Date.UTC(2021, 7, 6, 0, 0, 0); //北京时间2020-02-10 00:00:00
         var t2 = Date.UTC(todayYear, todayMonth, todayDate, todayHour, todayMinute, todaySecond);
         var diff = t2 - t1;
         var diffYears = Math.floor(diff / years);
@@ -187,7 +187,7 @@
         var diffHours = Math.floor((diff - (diffYears * 365 + diffDays) * days) / hours);
         var diffMinutes = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours) / minutes);
         var diffSeconds = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours - diffMinutes * minutes) / seconds);
-        document.getElementById("sitetime").innerHTML = " 🎮已运行 " + diffDays + " 天 " + diffHours + " 小时 " + diffMinutes + " 分钟 ";
+        document.getElementById("sitetime").innerHTML = " 🎮 已运行 " + diffDays + " 天 " + diffHours + " 小时 " + diffMinutes + " 分 " + diffSeconds + " 秒 ";
     }
 
     siteTime();
