--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
     <!-- 主题样式 -->
-<!--        <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">-->
+       <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
     <!--        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css"> -->
     <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/buble.css">-->
     <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/dark.css">-->
     <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/pure.css">-->
@@ -29,7 +29,7 @@
         onlyCover: true,  // 只显示封面
         loadNavbar: true,  // 设置导航栏
         loadSidebar: true, // 设置侧边栏
-        subMaxLevel: 4, //侧边栏显示当前页面的目录(标题)
+        subMaxLevel: 2, //侧边栏显示当前页面的目录(标题)
         sidebarDisplayLevel: 0,	// 设置默认折叠的层级
         auto2top: true, // 是否在切换页面后回到顶部
         logo: 'images/db_small.svg',
