--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
     <!-- 主题样式 -->
-       <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
-    <!--        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">-->
+    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css"> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css"> -->
-    <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/buble.css">-->
-    <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/dark.css">-->
-    <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/pure.css">-->
-    <!--    <link rel="stylesheet" href="//unpkg.com/docsify/themes/dolphin.css">-->
+    <!-- <link rel="stylesheet" href="//unpkg.com/docsify/themes/buble.css"> -->
+    <!-- <link rel="stylesheet" href="//unpkg.com/docsify/themes/dark.css"> -->
+    <!-- <link rel="stylesheet" href="//unpkg.com/docsify/themes/pure.css"> -->
+    <!-- <link rel="stylesheet" href="//unpkg.com/docsify/themes/dolphin.css"> -->
     <!-- 侧边栏样式 -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar.min.css"/>
     <link rel="stylesheet" href="static/style.min.css">
