目录结构调整

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="app"></div>
 <script>
     window.$docsify = {
-        name: '学习文档',
+        name: '小小程序猿-DB',
         //   repo: 'https://github.com/xiaoliangzong/document.git',			// 设置右上角显示git图标链接
         coverpage: true,  // 设置封面
         onlyCover: true,  // 只显示封面
@@ -32,8 +32,8 @@
         subMaxLevel: 3, //侧边栏显示当前页面的目录(标题)
         sidebarDisplayLevel: 0,	// 设置默认折叠的层级
         auto2top: true, // 是否在切换页面后回到顶部
-        logo: 'images/db_small.svg',
-        homepage: 'README.md',
+        // logo: 'images/db_small.svg',
+        homepage: 'Linux/基础命令.md',
         // 完整配置参数
         search: {
             paths: 'auto',
@@ -118,11 +118,11 @@
 <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
 <!-- alert 样式，用于复制时弹框 -->
 <link rel="stylesheet" href="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.css" type='text/css' media='all'/>
-<script>
+<!-- <script>
     document.body.oncopy = function () {
         swal("复制成功", "转载或引用请务必保留原文链接，并申明来源.", "success");
     };
-</script>
+</script> -->
 
 <!-- 访问量统计 -->
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
