--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 '/': '搜索'
             },
             noData: '找不到结果',
-            depth: 4,  // 搜索标题的最大程级, 1 - 6
+            depth: 3,  // 搜索标题的最大程级, 1 - 6
         },
         footer: {
             copy: '<span style="color: gainsboro">Copyright © 2021 dangbo-document</span>',
@@ -70,7 +70,7 @@
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 
 <!-- 添加一键拷贝代码-->
-<script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+<!-- <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script> -->
 
 <!-- 添加页脚 -->
 <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/docsify-footer-enh.min.js"></script>
