--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- <link rel="stylesheet" href="//unpkg.com/docsify/themes/pure.css"> -->
     <!-- <link rel="stylesheet" href="//unpkg.com/docsify/themes/dolphin.css"> -->
     <!-- 侧边栏样式 -->
-    <link rel="stylesheet" href="//unpkg.com/docsify-sidebar-collapse/dist/sidebar.min.css"/>
-    <link rel="stylesheet" href="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.css"/>
+    <!-- <link rel="stylesheet" href="//unpkg.com/docsify-sidebar-collapse/dist/sidebar.min.css"/> -->
+    <link rel="stylesheet" href="public/plugin/css/sidebar.min.css"/>
 </head>
 <body>
 <div id="app"></div>
