--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- 侧边栏样式 -->
     <!-- <link rel="stylesheet" href="//unpkg.com/docsify-sidebar-collapse/dist/sidebar.min.css"/> -->
     <link rel="stylesheet" href="public/plugin/css/sidebar.min.css"/>
+    <link rel="stylesheet" href="public/plugin/css/sidebar-folder.min.css"/>
 </head>
 <body>
 <div id="app"></div>
@@ -68,7 +69,8 @@
 <script src="public/plugin/js/docsify-pagination.min.js"></script>
 
 <!-- 侧边栏折叠 -->
-<script src="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+<!-- <script src="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script> -->
+<script src="public/plugin/js/docsify-sidebar-collapse.min.js"></script>
 
 <!-- 添加一键拷贝代码-->
 <script src="https://unpkg.com/docsify-copy-code"></script></script>
