--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             style: 'text-align: center;',
             class: 'className',
         },
+        alias: {
+            '/.*/_sidebar.md': '/_sidebar.md',
+            '/.*/_navbar.md': '/_navbar.md'
+        },
     }
 
 </script>
