--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
             '/.*/_sidebar.md': '/_sidebar.md',
             '/.*/_navbar.md': '/_navbar.md'
         },
+        markdown: {
+            // renderer: new window.markdownit() // markdown 解析器配置，docsify 默认使用marked
+        }
     }
-
+    
 </script>
 
 <!-- 侧边栏链接跳转 -->
@@ -77,7 +80,7 @@
 <script src="public/plugin/js/docsify-sidebar-collapse.min.js"></script>
 
 <!-- 添加一键拷贝代码-->
-<script src="https://unpkg.com/docsify-copy-code"></script></script>
+<script src="https://unpkg.com/docsify-copy-code"></script>
 
 <!-- 字数统计功能，显示在右上角 -->
 <script src="https://unpkg.com/docsify-count/dist/countable.js"></script>
@@ -119,6 +122,7 @@
 <script src="https://cdn.jsdelivr.net/gh/forthespada/forthespada.github.io@master/plugin/jquery.goup.js"></script> -->
 <script src="public/plugin/js/forthespada/jquery.js"></script>
 <script src="public/plugin/js/forthespada/jquery.goup.js"></script>
+
 <script type="text/javascript">
     $(document).ready(function () {
         $.goup({
@@ -176,7 +180,7 @@
 
 
 <!-- 运行时间统计 -->
-<script language=javascript>
+<script language = "javascript">
     function siteTime() {
         window.setTimeout("siteTime()", 1000);
         var seconds = 1000;
